[gd_scene load_steps=22 format=3 uid="uid://8u7kb5sknskf"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_0h6jt"]
[ext_resource type="Texture2D" uid="uid://dgb0pqbj2g824" path="res://assets/tilesheets/tile_map_V4.png" id="1_ism7i"]
[ext_resource type="PackedScene" uid="uid://cvu7bdrfa8e16" path="res://scenes/player.tscn" id="2_7jbwv"]
[ext_resource type="PackedScene" uid="uid://dc0wi684sh6m6" path="res://scenes/inventory/inventory.tscn" id="3_0nsk3"]
[ext_resource type="PackedScene" uid="uid://clt3wipmabvpb" path="res://interactable/chest.tscn" id="3_c16rl"]
[ext_resource type="Resource" uid="uid://4nsbfcgls8xy" path="res://test_inv.tres" id="4_38ufs"]
[ext_resource type="Script" path="res://scenes/inventory/inventory_interface.gd" id="4_72jsd"]
[ext_resource type="Script" path="res://resources/inventory/inventory_data.gd" id="4_cwqjo"]
[ext_resource type="Resource" uid="uid://cbi7hxjywfd2m" path="res://resources/item/items/potion.tres" id="5_g8cv7"]
[ext_resource type="Script" path="res://resources/inventory/slot_data.gd" id="6_lsoxq"]
[ext_resource type="PackedScene" uid="uid://cscgcd10ibwak" path="res://scenes/inventory/slot.tscn" id="7_eibdl"]
[ext_resource type="PackedScene" uid="uid://biv6bo2ifthr8" path="res://resources/item/pickup.tscn" id="7_f5w4x"]
[ext_resource type="Resource" uid="uid://x21xv1si7a61" path="res://test_equip.tres" id="10_usxbu"]
[ext_resource type="PackedScene" uid="uid://documyiknvvde" path="res://scenes/inventory/player_equipment.tscn" id="12_5cl3d"]
[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="15_2papl"]
[ext_resource type="PackedScene" uid="uid://bd4vahyf4bm52" path="res://scenes/hud/equipment.tscn" id="15_udl2x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yodlx"]
texture = ExtResource("1_ism7i")
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/bottom_right_corner = 0
5:3/0/terrains_peering_bit/bottom_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/bottom_right_corner = 0
6:3/0/terrains_peering_bit/bottom_side = 0
6:3/0/terrains_peering_bit/bottom_left_corner = 0
6:3/0/terrains_peering_bit/left_side = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/bottom_side = 0
7:3/0/terrains_peering_bit/bottom_left_corner = 0
7:3/0/terrains_peering_bit/left_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/terrains_peering_bit/bottom_side = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/bottom_side = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/bottom_left_corner = 0
10:3/0/terrains_peering_bit/left_side = 0
11:3/0 = 0
11:3/0/terrain_set = 0
11:3/0/terrain = 0
11:3/0/terrains_peering_bit/right_side = 0
11:3/0/terrains_peering_bit/bottom_right_corner = 0
11:3/0/terrains_peering_bit/bottom_side = 0
11:3/0/terrains_peering_bit/left_side = 0
12:3/0 = 0
12:3/0/terrain_set = 0
12:3/0/terrain = 0
12:3/0/terrains_peering_bit/bottom_side = 0
12:3/0/terrains_peering_bit/left_side = 0
13:3/0 = 0
13:3/0/terrain_set = 0
13:3/0/terrain = 0
13:3/0/terrains_peering_bit/right_side = 0
13:3/0/terrains_peering_bit/bottom_side = 0
13:3/0/terrains_peering_bit/left_side = 0
14:3/0 = 0
14:3/0/terrain_set = 0
14:3/0/terrain = 0
14:3/0/terrains_peering_bit/right_side = 0
14:3/0/terrains_peering_bit/bottom_side = 0
14:3/0/terrains_peering_bit/bottom_left_corner = 0
14:3/0/terrains_peering_bit/left_side = 0
14:3/0/terrains_peering_bit/top_side = 0
14:3/0/terrains_peering_bit/top_right_corner = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_right_corner = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/top_side = 0
5:4/0/terrains_peering_bit/top_right_corner = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/bottom_left_corner = 0
6:4/0/terrains_peering_bit/left_side = 0
6:4/0/terrains_peering_bit/top_left_corner = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/bottom_left_corner = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_left_corner = 0
7:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/top_side = 0
9:4/0 = 0
9:4/0/terrain_set = 0
9:4/0/terrain = 0
9:4/0/terrains_peering_bit/right_side = 0
9:4/0/terrains_peering_bit/bottom_side = 0
9:4/0/terrains_peering_bit/top_side = 0
9:4/0/terrains_peering_bit/top_right_corner = 0
10:4/0 = 0
10:4/0/terrain_set = 0
10:4/0/terrain = 0
10:4/0/terrains_peering_bit/right_side = 0
10:4/0/terrains_peering_bit/bottom_side = 0
10:4/0/terrains_peering_bit/bottom_left_corner = 0
10:4/0/terrains_peering_bit/left_side = 0
10:4/0/terrains_peering_bit/top_left_corner = 0
10:4/0/terrains_peering_bit/top_side = 0
10:4/0/terrains_peering_bit/top_right_corner = 0
11:4/0 = 0
11:4/0/terrain_set = 0
11:4/0/terrain = 0
11:4/0/terrains_peering_bit/right_side = 0
11:4/0/terrains_peering_bit/bottom_right_corner = 0
11:4/0/terrains_peering_bit/bottom_side = 0
11:4/0/terrains_peering_bit/left_side = 0
11:4/0/terrains_peering_bit/top_left_corner = 0
11:4/0/terrains_peering_bit/top_side = 0
11:4/0/terrains_peering_bit/top_right_corner = 0
12:4/0 = 0
12:4/0/terrain_set = 0
12:4/0/terrain = 0
12:4/0/terrains_peering_bit/bottom_side = 0
12:4/0/terrains_peering_bit/left_side = 0
12:4/0/terrains_peering_bit/top_left_corner = 0
12:4/0/terrains_peering_bit/top_side = 0
13:4/0 = 0
13:4/0/terrain_set = 0
13:4/0/terrain = 0
13:4/0/terrains_peering_bit/right_side = 0
13:4/0/terrains_peering_bit/bottom_side = 0
13:4/0/terrains_peering_bit/left_side = 0
13:4/0/terrains_peering_bit/top_left_corner = 0
13:4/0/terrains_peering_bit/top_side = 0
13:4/0/terrains_peering_bit/top_right_corner = 0
14:4/0 = 0
14:4/0/terrain_set = 0
14:4/0/terrain = 0
14:4/0/terrains_peering_bit/right_side = 0
14:4/0/terrains_peering_bit/bottom_right_corner = 0
14:4/0/terrains_peering_bit/bottom_side = 0
14:4/0/terrains_peering_bit/left_side = 0
14:4/0/terrains_peering_bit/top_side = 0
15:4/0 = 0
15:4/0/terrain_set = 0
15:4/0/terrain = 0
15:4/0/terrains_peering_bit/right_side = 0
15:4/0/terrains_peering_bit/bottom_side = 0
15:4/0/terrains_peering_bit/bottom_left_corner = 0
15:4/0/terrains_peering_bit/left_side = 0
15:4/0/terrains_peering_bit/top_side = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrain = 0
5:5/0/terrains_peering_bit/right_side = 0
5:5/0/terrains_peering_bit/top_side = 0
5:5/0/terrains_peering_bit/top_right_corner = 0
6:5/0 = 0
6:5/0/terrain_set = 0
6:5/0/terrain = 0
6:5/0/terrains_peering_bit/right_side = 0
6:5/0/terrains_peering_bit/left_side = 0
6:5/0/terrains_peering_bit/top_left_corner = 0
6:5/0/terrains_peering_bit/top_side = 0
6:5/0/terrains_peering_bit/top_right_corner = 0
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/terrain = 0
7:5/0/terrains_peering_bit/left_side = 0
7:5/0/terrains_peering_bit/top_left_corner = 0
7:5/0/terrains_peering_bit/top_side = 0
8:5/0 = 0
8:5/0/terrain_set = 0
8:5/0/terrain = 0
8:5/0/terrains_peering_bit/top_side = 0
9:5/0 = 0
9:5/0/terrain_set = 0
9:5/0/terrain = 0
9:5/0/terrains_peering_bit/right_side = 0
9:5/0/terrains_peering_bit/bottom_right_corner = 0
9:5/0/terrains_peering_bit/bottom_side = 0
9:5/0/terrains_peering_bit/top_side = 0
10:5/0 = 0
10:5/0/terrain_set = 0
10:5/0/terrain = 0
10:5/0/terrains_peering_bit/right_side = 0
10:5/0/terrains_peering_bit/bottom_right_corner = 0
10:5/0/terrains_peering_bit/bottom_side = 0
10:5/0/terrains_peering_bit/bottom_left_corner = 0
10:5/0/terrains_peering_bit/left_side = 0
10:5/0/terrains_peering_bit/top_left_corner = 0
10:5/0/terrains_peering_bit/top_side = 0
11:5/0 = 0
11:5/0/terrain_set = 0
11:5/0/terrain = 0
11:5/0/terrains_peering_bit/right_side = 0
11:5/0/terrains_peering_bit/bottom_right_corner = 0
11:5/0/terrains_peering_bit/bottom_side = 0
11:5/0/terrains_peering_bit/bottom_left_corner = 0
11:5/0/terrains_peering_bit/left_side = 0
11:5/0/terrains_peering_bit/top_side = 0
11:5/0/terrains_peering_bit/top_right_corner = 0
12:5/0 = 0
12:5/0/terrain_set = 0
12:5/0/terrain = 0
12:5/0/terrains_peering_bit/bottom_side = 0
12:5/0/terrains_peering_bit/bottom_left_corner = 0
12:5/0/terrains_peering_bit/left_side = 0
12:5/0/terrains_peering_bit/top_side = 0
13:5/0 = 0
13:5/0/terrain_set = 0
13:5/0/terrain = 0
13:5/0/terrains_peering_bit/right_side = 0
13:5/0/terrains_peering_bit/bottom_right_corner = 0
13:5/0/terrains_peering_bit/bottom_side = 0
13:5/0/terrains_peering_bit/bottom_left_corner = 0
13:5/0/terrains_peering_bit/left_side = 0
13:5/0/terrains_peering_bit/top_side = 0
14:5/0 = 0
14:5/0/terrain_set = 0
14:5/0/terrain = 0
14:5/0/terrains_peering_bit/right_side = 0
14:5/0/terrains_peering_bit/bottom_side = 0
14:5/0/terrains_peering_bit/left_side = 0
14:5/0/terrains_peering_bit/top_side = 0
14:5/0/terrains_peering_bit/top_right_corner = 0
15:5/0 = 0
15:5/0/terrain_set = 0
15:5/0/terrain = 0
15:5/0/terrains_peering_bit/right_side = 0
15:5/0/terrains_peering_bit/bottom_side = 0
15:5/0/terrains_peering_bit/left_side = 0
15:5/0/terrains_peering_bit/top_left_corner = 0
15:5/0/terrains_peering_bit/top_side = 0
5:6/0 = 0
5:6/0/terrain_set = 0
5:6/0/terrain = 0
5:6/0/terrains_peering_bit/right_side = 0
6:6/0 = 0
6:6/0/terrain_set = 0
6:6/0/terrain = 0
6:6/0/terrains_peering_bit/right_side = 0
6:6/0/terrains_peering_bit/left_side = 0
7:6/0 = 0
7:6/0/terrain_set = 0
7:6/0/terrain = 0
7:6/0/terrains_peering_bit/left_side = 0
8:6/0 = 0
8:6/0/terrain_set = 0
8:6/0/terrain = 0
9:6/0 = 0
9:6/0/terrain_set = 0
9:6/0/terrain = 0
9:6/0/terrains_peering_bit/right_side = 0
9:6/0/terrains_peering_bit/top_side = 0
10:6/0 = 0
10:6/0/terrain_set = 0
10:6/0/terrain = 0
10:6/0/terrains_peering_bit/right_side = 0
10:6/0/terrains_peering_bit/left_side = 0
10:6/0/terrains_peering_bit/top_left_corner = 0
10:6/0/terrains_peering_bit/top_side = 0
11:6/0 = 0
11:6/0/terrain_set = 0
11:6/0/terrain = 0
11:6/0/terrains_peering_bit/right_side = 0
11:6/0/terrains_peering_bit/left_side = 0
11:6/0/terrains_peering_bit/top_side = 0
11:6/0/terrains_peering_bit/top_right_corner = 0
12:6/0 = 0
12:6/0/terrain_set = 0
12:6/0/terrain = 0
12:6/0/terrains_peering_bit/left_side = 0
12:6/0/terrains_peering_bit/top_side = 0
13:6/0 = 0
13:6/0/terrain_set = 0
13:6/0/terrain = 0
13:6/0/terrains_peering_bit/right_side = 0
13:6/0/terrains_peering_bit/left_side = 0
13:6/0/terrains_peering_bit/top_side = 0
14:6/0 = 0
14:6/0/terrain_set = 0
14:6/0/terrain = 0
14:6/0/terrains_peering_bit/right_side = 0
14:6/0/terrains_peering_bit/bottom_right_corner = 0
14:6/0/terrains_peering_bit/bottom_side = 0
14:6/0/terrains_peering_bit/left_side = 0
14:6/0/terrains_peering_bit/top_left_corner = 0
14:6/0/terrains_peering_bit/top_side = 0
4:7/0 = 0
5:7/0 = 0
5:7/0/probability = 0.05
6:7/0 = 0
6:7/0/probability = 0.05
7:7/0 = 0
7:7/0/probability = 0.05
8:7/0 = 0
8:7/0/probability = 0.05
9:7/0 = 0
9:7/0/terrain_set = 0
9:7/0/terrain = 0
9:7/0/terrains_peering_bit/right_side = 0
9:7/0/terrains_peering_bit/bottom_side = 0
9:7/0/terrains_peering_bit/top_side = 0
10:7/0 = 0
10:7/0/terrain_set = 0
10:7/0/terrain = 0
10:7/0/terrains_peering_bit/right_side = 0
10:7/0/terrains_peering_bit/bottom_side = 0
10:7/0/terrains_peering_bit/bottom_left_corner = 0
10:7/0/terrains_peering_bit/left_side = 0
10:7/0/terrains_peering_bit/top_left_corner = 0
10:7/0/terrains_peering_bit/top_side = 0
11:7/0 = 0
11:7/0/terrain_set = 0
11:7/0/terrain = 0
11:7/0/terrains_peering_bit/right_side = 0
11:7/0/terrains_peering_bit/bottom_right_corner = 0
11:7/0/terrains_peering_bit/bottom_side = 0
11:7/0/terrains_peering_bit/left_side = 0
11:7/0/terrains_peering_bit/top_side = 0
11:7/0/terrains_peering_bit/top_right_corner = 0
12:7/0 = 0
12:7/0/terrain_set = 0
12:7/0/terrain = 0
12:7/0/terrains_peering_bit/bottom_side = 0
12:7/0/terrains_peering_bit/left_side = 0
12:7/0/terrains_peering_bit/top_side = 0
13:7/0 = 0
13:7/0/terrain_set = 0
13:7/0/terrain = 0
13:7/0/terrains_peering_bit/right_side = 0
13:7/0/terrains_peering_bit/bottom_side = 0
13:7/0/terrains_peering_bit/left_side = 0
13:7/0/terrains_peering_bit/top_side = 0
5:8/0 = 0
5:8/0/terrain_set = 0
5:8/0/terrain = 0
5:8/0/terrains_peering_bit/right_side = 0
5:8/0/terrains_peering_bit/bottom_right_corner = 0
5:8/0/terrains_peering_bit/bottom_side = 0
6:8/0 = 0
6:8/0/terrain_set = 0
6:8/0/terrain = 0
6:8/0/terrains_peering_bit/bottom_side = 0
6:8/0/terrains_peering_bit/bottom_left_corner = 0
6:8/0/terrains_peering_bit/left_side = 0
5:9/0 = 0
5:9/0/terrain_set = 0
5:9/0/terrain = 0
5:9/0/terrains_peering_bit/right_side = 0
5:9/0/terrains_peering_bit/top_side = 0
5:9/0/terrains_peering_bit/top_right_corner = 0
6:9/0 = 0
6:9/0/terrain_set = 0
6:9/0/terrain = 0
6:9/0/terrains_peering_bit/left_side = 0
6:9/0/terrains_peering_bit/top_left_corner = 0
6:9/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_vqfiw"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Grass"
terrain_set_0/terrain_0/color = Color(0.992157, 0, 0.498039, 1)
sources/2 = SubResource("TileSetAtlasSource_yodlx")

[sub_resource type="Resource" id="Resource_l3ba5"]
script = ExtResource("6_lsoxq")
item_data = ExtResource("5_g8cv7")
quantity = 5

[sub_resource type="Resource" id="Resource_khpt8"]
script = ExtResource("4_cwqjo")
slot_datas = Array[ExtResource("6_lsoxq")]([null, SubResource("Resource_l3ba5"), null, null, null, null, null, null, null, null, null, null])

[sub_resource type="Resource" id="Resource_o1esh"]
script = ExtResource("6_lsoxq")
item_data = ExtResource("5_g8cv7")
quantity = 84

[node name="Node2D" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0h6jt")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vqfiw")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 327682, 8, 131073, 327682, 4, 196609, 327682, 9, 262145, 262146, 7, 327681, 327682, 3, 393217, 327682, 9, 458753, 262146, 7, 524289, 524290, 7, 589825, 393218, 3, 655361, 393218, 4, 720897, 393218, 5, 786433, 262146, 7, 851969, 524290, 3, 917505, 524290, 5, 983041, 262146, 7, 1048577, 262146, 7, 1114113, 262146, 7, 1179649, 262146, 7, 65538, 393218, 8, 131074, 655362, 5, 196610, 720898, 4, 262146, 327682, 4, 327682, 720898, 5, 393218, 393218, 5, 458754, 262146, 7, 524290, 262146, 7, 589826, 393218, 3, 655362, 393218, 4, 720898, 393218, 5, 786434, 393218, 7, 851970, 262146, 7, 917506, 262146, 7, 983042, 262146, 7, 1048578, 524290, 6, 1114114, 262146, 7, 1179650, 262146, 7, 65539, 262146, 7, 131075, 393218, 8, 196611, 655362, 5, 262147, 393218, 4, 327683, 393218, 4, 458755, 327682, 9, 524291, 262146, 7, 589827, 393218, 3, 655363, 393218, 4, 720899, 393218, 5, 786435, 262146, 7, 851971, 524290, 7, 917507, 524290, 7, 983043, 262146, 7, 1048579, 262146, 7, 1114115, 262146, 7, 1179651, 262146, 7, 65540, 262146, 7, 131076, 262146, 7, 262148, 393218, 4, 327684, 393218, 4, 393220, 393218, 4, 458756, 393218, 5, 524292, 262146, 7, 589828, 393218, 3, 655364, 393218, 4, 720900, 393218, 5, 786436, 327682, 7, 851972, 262146, 7, 917508, 458754, 7, 983044, 262146, 7, 1048580, 262146, 7, 1114116, 262146, 7, 1179652, 262146, 7, 65541, 262146, 7, 131077, 262146, 7, 196613, 655362, 3, 262149, 458754, 4, 327685, 655362, 5, 393221, 393218, 4, 458757, 720898, 4, 524293, 327682, 4, 589829, 720898, 5, 655365, 393218, 4, 720901, 393218, 5, 786437, 262146, 7, 851973, 262146, 7, 917509, 262146, 7, 983045, 262146, 7, 1048581, 262146, 7, 1114117, 262146, 7, 1179653, 262146, 7, 65542, 262146, 7, 131078, 262146, 7, 196614, 393218, 6, 262150, 262146, 7, 327686, 393218, 3, 393222, 393218, 4, 458758, 393218, 4, 524294, 393218, 4, 589830, 393218, 4, 655366, 393218, 4, 720902, 393218, 5, 786438, 262146, 7, 851974, 262146, 7, 917510, 327682, 7, 983046, 262146, 7, 1048582, 262146, 7, 1114118, 262146, 7, 1179654, 458754, 7, 65543, 327682, 4, 131079, 327682, 4, 196615, 720898, 7, 262151, 327682, 4, 327687, 720898, 5, 393223, 393218, 4, 458759, 393218, 4, 524295, 393218, 4, 589831, 393218, 4, 655367, 393218, 4, 720903, 720898, 4, 786439, 327682, 4, 851975, 327682, 4, 917511, 327682, 4, 983047, 327682, 4, 1048583, 327682, 4, 1114119, 327682, 4, 1179655, 327682, 4, 65544, 393218, 4, 131080, 393218, 4, 196616, 393218, 4, 262152, 393218, 4, 327688, 393218, 4, 393224, 393218, 4, 458760, 393218, 4, 524296, 393218, 4, 589832, 393218, 4, 655368, 393218, 4, 720904, 393218, 4, 786440, 393218, 4, 851976, 393218, 4, 917512, 393218, 4, 983048, 393218, 4, 1048584, 393218, 4, 1114120, 393218, 4, 1179656, 393218, 4, 65545, 458754, 4, 131081, 458754, 4, 196617, 655362, 7, 262153, 458754, 4, 327689, 655362, 7, 393225, 458754, 4, 458761, 458754, 4, 524297, 458754, 4, 589833, 655362, 5, 655369, 393218, 4, 720905, 655362, 4, 786441, 458754, 4, 851977, 458754, 4, 917513, 458754, 4, 983049, 458754, 4, 1048585, 458754, 4, 1114121, 458754, 4, 1179657, 458754, 4, 65546, 262146, 7, 131082, 262146, 7, 196618, 393218, 6, 262154, 262146, 7, 393226, 262146, 7, 458762, 524290, 7, 524298, 262146, 7, 589834, 393218, 3, 655370, 393218, 4, 720906, 393218, 5, 786442, 262146, 7, 851978, 262146, 7, 917514, 393218, 7, 983050, 262146, 7, 1048586, 458754, 7, 1114122, 262146, 7, 1179658, 262146, 7, 65547, 262146, 7, 131083, 327682, 7, 196619, 851970, 3, 262155, 524290, 4, 393227, 262146, 7, 458763, 262146, 7, 524299, 327682, 7, 589835, 393218, 3, 655371, 393218, 4, 720907, 720898, 4, 786443, 327682, 9, 851979, 262146, 7, 917515, 262146, 7, 983051, 262146, 7, 1048587, 262146, 7, 1114123, 262146, 7, 1179659, 262146, 7, 65548, 524290, 7, 131084, 262146, 7, 196620, 393218, 6, 262156, 262146, 7, 327692, 720898, 3, 393228, 589826, 4, 458764, 524290, 4, 524300, 524290, 4, 589836, 851970, 5, 655372, 393218, 4, 720908, 393218, 4, 786444, 720898, 4, 851980, 327682, 5, 917516, 262146, 7, 983052, 458754, 7, 1048588, 524290, 7, 1114124, 262146, 7, 1179660, 327682, 7, 65549, 262146, 7, 131085, 327682, 8, 196621, 720898, 7, 262157, 589826, 4, 327693, 786434, 5, 393229, 655362, 6, 458765, 589826, 3, 524301, 589826, 6, 589837, 393218, 3, 655373, 393218, 4, 720909, 655362, 4, 786445, 458754, 4, 851981, 917506, 6, 917517, 327682, 5, 983053, 262146, 7, 1048589, 327682, 7, 1114125, 458754, 7, 1179661, 262146, 7, 65550, 524290, 4, 131086, 851970, 5, 196622, 393218, 4, 262158, 393218, 5, 327694, 262146, 7, 393230, 393218, 6, 458766, 393218, 6, 524302, 393218, 6, 589838, 393218, 3, 655374, 393218, 4, 720910, 393218, 5, 786446, 262146, 7, 851982, 458754, 3, 917518, 917506, 6, 983054, 327682, 5, 1048590, 262146, 7, 1114126, 262146, 7, 1179662, 262146, 7, 65551, 262146, 7, 131087, 393218, 3, 196623, 393218, 4, 262159, 393218, 5, 327695, 262146, 7, 393231, 393218, 6, 458767, 786434, 3, 524303, 786434, 6, 589839, 393218, 3, 655375, 393218, 4, 720911, 720898, 4, 786447, 327682, 5, 851983, 262146, 7, 917519, 393218, 8, 983055, 917506, 6, 1048591, 327682, 9, 1114127, 262146, 7, 1179663, 262146, 7, 65552, 524290, 7, 131088, 393218, 3, 196624, 655362, 4, 262160, 786434, 4, 327696, 524290, 4, 393232, 851970, 7, 458768, 524290, 4, 524304, 524290, 4, 589840, 851970, 5, 655376, 393218, 4, 720912, 393218, 4, 786448, 393218, 5, 851984, 327682, 7, 917520, 262146, 7, 983056, 393218, 8, 1048592, 917506, 6, 1114128, 327682, 9, 1179664, 262146, 7, 65553, 589826, 7, 131089, 786434, 5, 196625, 393218, 5, 262161, 393218, 7, 327697, 262146, 7, 393233, 393218, 6, 458769, 524290, 3, 524305, 524290, 5, 589841, 393218, 3, 655377, 393218, 4, 720913, 393218, 4, 786449, 720898, 4, 851985, 327682, 5, 917521, 262146, 7, 983057, 262146, 7, 1048593, 458754, 3, 1114129, 917506, 6, 1179665, 327682, 5, 65554, 786434, 3, 131090, 524290, 4, 196626, 786434, 4, 262162, 524290, 4, 327698, 524290, 4, 393234, 786434, 7, 458770, 524290, 4, 524306, 524290, 4, 589842, 851970, 5, 655378, 393218, 4, 720914, 655362, 4, 786450, 458754, 4, 851986, 458754, 5, 917522, 262146, 7, 983058, 262146, 7, 1048594, 262146, 7, 1114130, 458754, 3, 1179666, 393218, 9, 327690, 393218, 6, 327691, 851970, 6, 393219, 720898, 4, 196612, 393218, 3, 917526, 589826, 6, 851990, 524290, 4, 786454, 524290, 4, 720918, 524290, 4, 655382, 524290, 4, 589846, 524290, 4, 524310, 524290, 4, 458774, 524290, 4, 393238, 524290, 4, 327702, 524290, 4, 262166, 524290, 4, 196630, 524290, 4, 131094, 524290, 4, 65558, 524290, 3, 917531, 458754, 6, 917530, 393218, 6, 917529, 393218, 6, 917528, 393218, 6, 917527, 393218, 6, 917533, 589826, 6, 851997, 524290, 4, 786461, 524290, 4, 720925, 524290, 4, 655389, 589826, 7, 589853, 524290, 4, 524317, 524290, 4, 458781, 524290, 4, 393245, 589826, 3, 458785, 458754, 6, 458784, 393218, 6, 393247, 786434, 3, 393246, 393218, 6, 917538, 458754, 6, 917537, 393218, 6, 917536, 393218, 6, 917535, 393218, 6, 917534, 393218, 6, 655392, 458754, 6, 655391, 393218, 6, 655390, 393218, 6, 983077, 524290, 5, 917541, 524290, 4, 852005, 524290, 4, 786469, 589826, 7, 720933, 524290, 4, 655397, 589826, 7, 589861, 524290, 4, 524325, 524290, 4, 458789, 524290, 4, 393253, 524290, 4, 327717, 524290, 4, 262181, 524290, 4, 196645, 524290, 3, 655398, 393218, 6, 589863, 524290, 4, 524328, 786434, 6, 458793, 458754, 6, 1114155, 524290, 5, 1048618, 589826, 6, 983081, 589826, 6, 917544, 589826, 6, 852007, 589826, 6, 786470, 393218, 6, 1048623, 524290, 5, 983087, 524290, 4, 917551, 524290, 4, 852015, 524290, 4, 786479, 589826, 4, 720943, 327682, 4, 655407, 327682, 8, 589872, 524290, 4, 524336, 524290, 4, 458800, 524290, 4, 393264, 524290, 4, 327728, 524290, 4, 262192, 524290, 4, 196656, 524290, 3, 786480, 393218, 5, 720945, 393218, 3, 720946, 786434, 5, 655411, 393218, 6, 655412, 458754, 6, 1114165, 458754, 6, 1048628, 524290, 4, 983091, 589826, 6, 917554, 589826, 6, 852018, 524290, 4, 786481, 393218, 5, 720944, 655362, 5, 262205, 524290, 3, 327741, 524290, 4, 393276, 589826, 3, 458812, 524290, 4, 524347, 589826, 3, 589883, 524290, 4, 655418, 589826, 3, 720954, 524290, 4, 786490, 851970, 6, 852025, 524290, 4, 917561, 524290, 4, 983096, 589826, 3, 1048632, 524290, 5, 1048641, 524290, 5, 983105, 786434, 3, 917568, 524290, 4, 852032, 524290, 4, 786496, 786434, 4, 720959, 589826, 5, 655423, 524290, 4, 589887, 786434, 3, 524350, 524290, 4, 458814, 524290, 4, 393278, 786434, 3, 786495, 720898, 6, 786494, 393218, 6, 786493, 393218, 6, 786492, 393218, 6, 786491, 393218, 6, 786501, 524290, 5, 720965, 524290, 4, 655429, 524290, 4, 589893, 524290, 4, 524357, 786434, 3, 458820, 524290, 4, 393284, 524290, 4, 327748, 524290, 4, 262212, 524290, 4, 196676, 524290, 3, 1048645, 524290, 5, 983109, 524290, 3, 1245254, 458754, 6, 1245253, 393218, 6, 1245252, 393218, 6, 1245251, 393218, 6, 1245250, 393218, 6, 1245249, 393218, 6, 1245248, 393218, 6, 1245247, 393218, 6, 1245246, 393218, 6, 1245245, 393218, 6, 1245244, 393218, 6, 1245243, 393218, 6, 1245242, 393218, 6, 1245241, 393218, 6, 1245240, 393218, 6, 1245239, 393218, 6, 1245238, 393218, 6, 1245237, 393218, 6, 1245236, 393218, 6, 1245235, 393218, 6, 1245234, 393218, 6, 1245233, 393218, 6, 1245232, 393218, 6, 1245231, 393218, 6, 1245230, 393218, 6, 1245229, 393218, 6, 1245228, 393218, 6, 1245227, 393218, 6, 1245226, 393218, 6, 1245225, 393218, 6, 1245224, 393218, 6, 1245223, 393218, 6, 1245222, 393218, 6, 1245221, 393218, 6, 1245220, 393218, 6, 1245219, 393218, 6, 1245218, 393218, 6, 1245217, 393218, 6, 1245216, 393218, 6, 1245215, 393218, 6, 1245214, 393218, 6, 1245213, 393218, 6, 1245212, 393218, 6, 1245211, 393218, 6, 1245210, 393218, 6, 1245209, 393218, 6, 1245208, 393218, 6, 1245207, 393218, 6, 1245206, 327682, 6, 655399, 786434, 6, 524327, 589826, 3, 458792, 589826, 3, 786471, 786434, 3, 852008, 786434, 3, 917545, 786434, 3, 983082, 786434, 3, 1048619, 786434, 3, 655408, 786434, 5, 786482, 786434, 4, 655410, 589826, 3, 917555, 786434, 3, 983092, 786434, 3, 1114164, 589826, 6, 983097, 786434, 6, 786489, 589826, 3, 655419, 786434, 6, 524348, 786434, 6, 393277, 851970, 6, 589886, 589826, 6, 720960, 458754, 3, 983104, 589826, 6, 524356, 589826, 6, 458783, 589826, 6)

[node name="Interactables" type="Node2D" parent="."]

[node name="Chest" parent="Interactables" instance=ExtResource("3_c16rl")]
position = Vector2(103, 72)
inventory_data = SubResource("Resource_khpt8")

[node name="Pickups" type="Node2D" parent="."]

[node name="Pickup" parent="Pickups" instance=ExtResource("7_f5w4x")]
position = Vector2(168.333, 71.6667)
slot_data = SubResource("Resource_o1esh")

[node name="Player" parent="." instance=ExtResource("2_7jbwv")]
inventory_data = ExtResource("4_38ufs")
equipment_data = ExtResource("10_usxbu")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_72jsd")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("3_0nsk3")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_top = 128.0
offset_right = 202.0
offset_bottom = 192.0
grow_horizontal = 2

[node name="PlayerEquipment" parent="UI/InventoryInterface" instance=ExtResource("12_5cl3d")]
layout_mode = 1
offset_left = 256.0
offset_top = 84.0
offset_right = 320.0
offset_bottom = 488.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("3_0nsk3")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = 60.0
offset_right = 202.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("7_eibdl")]
visible = false
modulate = Color(1, 1, 1, 0.498039)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0

[node name="InfoCard" type="Control" parent="UI/InventoryInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("15_2papl")

[node name="Equipment" parent="UI/HUD" instance=ExtResource("15_udl2x")]
layout_mode = 1

[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
